# mycomesh

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  Dockerfile  Dockerfile.codex  Makefile  README.md  agents.example.json  docker-compose.yml  foundry.toml  myco-protocol-competition-proposal.md  pyproject.toml  requirements.txt
contracts/: FandaiSettlement.sol  FandaiTestnetDeployer.sol  FandaiToken.sol  MycoSettlementV2.sol  MycoSettlementV3.sol  MycoSettlementV4.sol  MycoTestnetDeployer.sol  MycoToken.sol  MycoTokenV2.sol  MycoV3TestnetDeployer.sol  TestUSDC.sol
deploy/: nginx-mycomesh-proxy.conf  nginx-mycomesh-stream.conf  nginx-mycomesh-tls.conf  nginx-mycomesh.conf
deployments/: sepolia-myco-v2.json  sepolia-myco-v3.json  sepolia-myco-v4.json  sepolia-provider-network-v4.json  sepolia-provider-network.json  sepolia.json
docs/: business-model-core.md  container-images.md  local-consumer.md  myco-protocol-competition-proposal.md  native-metered-upstream.md  quick-deploy.md  security-audit-and-remediation.md  settlement-v3-cli-integration.md
gateway/: __init__.py  attestation.py  auth_store.py  billing.py  browser_cors.py  chain.py  chain_v3.py  chain_v4.py  channel_policy.py  client.py  codex_app_backend.py  codex_backend.py  codex_provider_config.py  config.py  consumer_admission.py  database.py  deployment_validation.py  gateway_registry.py  identity.py  indexer.py  indexer_service.py  ledger.py  local_consumer.py  main.py  mycomesh.py  native_metering.py  netio.py  orchestration.py  p2p.py  pool.py  pricing.py  pricing_source.py  protocol.py  (+15 more)
(+126 files in other folders)
