[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycomesh-gateway"
version = "0.2.0"
description = "MycoMesh gateway, provider, bridge, proxy, and testnet settlement CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "cryptography==46.0.7",
  "python-dotenv==1.2.2",
  "pycryptodome==3.23.0",
  "psycopg[binary]==3.3.4",
  "uvicorn[standard]==0.51.0",
]

[project.scripts]
mycomesh = "gateway.client:main"
mycomesh-gateway = "gateway.client:main"

[tool.setuptools]
packages = ["gateway"]
